[package]
name = "ranim_test"
version = "0.1.0"
edition = "2024"

[dependencies]
dagre_rust = "0.0.5"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }
graphlib_rust = "0.0.2"
layout-cli = "0.1.3"
layout-rs = "0.1.3"
rand = "0.9.1"
rand_chacha = "0.9.0"
ranim = { version = "0.1.0-alpha.13" , features = ["app"]}
